--- a/scss/layout/_main-nav.scss
+++ b/scss/layout/_main-nav.scss
@@ -21,9 +21,8 @@
         backdrop-filter: blur(3rem);
     }
     @media only screen and (min-width: 768px) {
-        gap: 3rem;
         height: 6.558rem;
-        padding: 0 3rem;
+        padding: 0 2rem;
         position: relative;
         inset: auto;
         align-items: center;
